--- a/.github/workflows/terraformCD.yaml
+++ b/.github/workflows/terraformCD.yaml
@@ -82,7 +82,7 @@ jobs:
       - uses: trstringer/manual-approval@v1
         with:
           secret: ${{ secrets.GIT_PAT }}
-          approvers: Oz Shwartz
+          approvers: ${{ var.TERRAFORM_MANUAL_APPROVALS }}
           minimum-approvals: 1
           issue-title: "Terraform Apply Approval Request"
           issue-body: "Please approve or deny the terraform apply command"
