--- a/helm-charts/applications/mongo-app.yaml
+++ b/helm-charts/applications/mongo-app.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   project: default
   source:
-    repoURL: 'https://github.com/d4v5he/gh_arc.git'
+    repoURL: 'https://github.com/OzShwartz/gh-k8s-agroCD.git'
     targetRevision: HEAD
     path: helm-charts/mongoapp
   destination:
